--- a/privacy.html
+++ b/privacy.html
@@ -61,5 +61,8 @@
     
     <h2>10. Contact</h2>
     <p>For privacy concerns or data requests, contact: [your-email@example.com]</p>
+
+    <h2>tiktok-developers-site-verification=giWZrCz2XRoyMrSnPzkjkK0hFXQGxmeY </p>
+        
 </body>
 </html>
