--- a/privacy.html
+++ b/privacy.html
@@ -62,7 +62,7 @@
     <h2>10. Contact</h2>
     <p>For privacy concerns or data requests, contact: [your-email@example.com]</p>
 
-    <h2>tiktok-developers-site-verification=giWZrCz2XRoyMrSnPzkjkK0hFXQGxmeY </p>
-        
+      <h2>11. TikTok Verification</h2>
+    <p>TikTok Verification Code: [paste the content of the verification file here]</p>
 </body>
 </html>
