--- a/privacy.html
+++ b/privacy.html
@@ -63,6 +63,6 @@
     <p>For privacy concerns or data requests, contact: [your-email@example.com]</p>
 
       <h2>11. TikTok Verification</h2>
-    <p>TikTok Verification Code: [paste the content of the verification file here]</p>
+    <p>TikTok Verification Code: tiktok-developers-site-verification=QePxMbvDP2HDBCwS6gZYxriUpapmUPL7</p>
 </body>
 </html>
